--- a/css/base.css
+++ b/css/base.css
@@ -173,7 +173,7 @@ img {
   display: none;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 768px) {
   .desktop-only {
     display: none;
   }
